--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@johnn-e/react-mesh-gradient",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
+  "homepage": "https://github.com/JohnnyLeek1/React-Mesh-Gradient",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JohnnyLeek1/React-Mesh-Gradient"
+  },
+  "readme": "README.md",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
